--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "debug-logfmt": "^1.4.7",
     "lucide-react": "^0.469.0",
-    "next": "^14.2.28",
+    "next": "^16.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "youtube-dl-exec": "^3.0.12"
