--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "debug": "^4.4.3",
     "lucide-react": "^0.469.0",
     "next": "^16.1.6",
     "react": "^18.3.1",
